<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="hello">Hello World, SceneDice!</string>
<string name="app_name">超级骰子</string>
<string name="string1">设置</string>
<string name="string2">模式名：</string>
<string name="string3">第一项：</string>
<string name="string4">第二项：</string>
<string name="string5">第三项：</string>
<string name="string6">第四项：</string>
<string name="string7">第五项：</string>
<string name="string8">第六项：</string>
<string name="string9">确定</string>
<string name="string10">取消</string>
<string name="string11">情景选择</string>
<string name="string12">请选择模式</string>
<string name="string13">震动</string>
<string name="string14">我的模式</string>
<string name="string15">你还没有自定义模式！\n</string>
<string name="string16">选项</string>
<string name="string17">点击选定更改为此模式!\n\n点击删除将删除此模式!</string>
<string name="string18">选定</string>
<string name="string19">删除</string>
<string name="string20">酒吧模式</string>
<string name="string21">家务模式</string>
<string name="string22">两选项模式</string>
<string name="string23">三选项模式</string>
<string name="string24">四选项模式</string>
<string name="string25">五选项模式</string>
<string name="string26">六选项模式</string>
<string name="string27">洗碗</string>
<string name="string28">擦地</string>
<string name="string29">买菜</string>
<string name="string30">做饭</string>
<string name="string31">呆着</string>
<string name="string32">洗衣</string>
<string name="string33">喝一杯</string>
<string name="string34">喝两杯</string>
<string name="string35">大家喝</string>
<string name="string36">没事</string>
<string name="string37">点将</string>
<string name="string38">随意</string>
<string name="string39">提示</string>
<string name="string40">\n  请确认所有选项是否\n  都已经填上！\n</string>
<string name="string41">系统模式</string>
<string name="string42">自定义模式</string>
<string name="string43">分享</string>
<string name="string44">添加</string>
<string name="string45">自定义情景</string>
<string name="string46">编辑</string>
<string name="string47">编辑已有的情景</string>
<string name="string48">震动</string>
<string name="string49">晃动骰子震动效果</string>
<string name="string50">关</string>
<string name="string51">请选择你要操作的项</string>
<string name="string52">  你必须至少输入前两项\n  否则不能创建情景 ！ </string>
<string name="string53">帮助</string>
<string name="string54">关于</string>
<string name="string55">*点击MENU菜单中的情景选择可以选择应用自带和用户自定义的情景\n\n*应用预设了三种情景\n1.家务模式：轻松摇一摇决定谁该做家务,再也不用因为家务活争吵了,给家庭一个欢乐和谐的环境\n2.酒吧模式：朋友聚会必备,朋友间喝酒时摇一摇骰子,增加感情\n3.大冒险模式：真心话大冒险经典游戏由我们的应用帮你实现,给你生活带来更多欢乐和刺激\n\n*点击MENU菜单中的设置选项可以添加、编辑情景\n\n*您可以点击MENU菜单中的分享与好友分享此应用</string>
<string name="string56">\n*不能删除系统情景！</string>
<string name="string57">在www.wanderphone.com上有个不错的应用叫做超级骰子</string>
<string name="string58">大冒险模式</string>
<string name="string59">唱一曲</string>
<string name="string60">真心话</string>
<string name="string61">听指示</string>
<string name="string62">扮鬼脸</string>
<string name="string63">吻对方</string>
<string name="string64">脱一件</string>
<string name="string65">超级骰子(Android)\n\n版本：1.0Beta\nbuild 20110616\n开发：豌豆风团队</string>
<string name="string66">主页：</string>
<string name="string67">http://www.wanderphone.com</string>
<string name="string68">客服邮件:</string>
<string name="string69">service@wanderphone.com</string>
<string name="string70">新浪微博：豌豆风\n腾讯微博：豌豆风</string>
<string name="string71">音效</string>
<string name="string72">晃动骰子时的音效</string>
</resources>
