<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	 android:scrollbars="vertical"
	>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/string1"
   
    android:gravity="center_horizontal"
    android:textSize="25sp"
    />
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/string2"
    android:textSize="20sp"
   
    />
<EditText
	android:id="@+id/et1"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textSize="20sp"
	/>
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/string3"
    android:textSize="20sp"
   
    />
<EditText
	android:id="@+id/et2"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textSize="20sp"
	/>
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/string4"
    android:textSize="20sp"
    
    />
<EditText
	android:id="@+id/et3"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textSize="20sp"
	/>
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/string5"
    android:textSize="20sp"
    
    />
<EditText
	android:id="@+id/et4"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textSize="20sp"
	/>
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/string6"
    android:textSize="20sp"
    />
<EditText
	android:id="@+id/et5"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textSize="20sp"
	/>
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/string7"
    android:textSize="20sp"
   
    />
<EditText
	android:id="@+id/et6"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textSize="20sp"
	/>
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/string8"
    android:textSize="20sp"
   
    />
<EditText
	android:id="@+id/et7"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textSize="20sp"
	/>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dip"
    >
<Button
	android:id="@+id/bt1"
	android:layout_width="150dip"
	android:layout_height="wrap_content"
	android:text="@string/string9"
	android:textSize="20sp"
	
	/>
<Button
	android:id="@+id/bt2"
	android:layout_marginLeft="10dip"
	android:layout_width="150dip"
	android:layout_height="wrap_content"
	android:text="@string/string10"
	android:textSize="20sp"
	
	/>
</LinearLayout>
</LinearLayout>
</ScrollView>